--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Idle Grid</title>
+    <title>Cards-n-Catapults Idle</title>
 
     <link
       rel="stylesheet"
