--- a/dev/index.html
+++ b/dev/index.html
@@ -2,4 +2,4 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-DXTCKHC0JE');</script><script defer="defer" src="js/bundle.6c46fbc05175d408b271.min.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+      gtag('config', 'G-DXTCKHC0JE');</script><link rel="icon" href="favicon.ico"><script defer="defer" src="js/bundle.811a6b8a396204301c1f.min.js"></script></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
